--- a/app/design/frontend/base/default/layout/recurse_pitchprint.xml
+++ b/app/design/frontend/base/default/layout/recurse_pitchprint.xml
@@ -12,15 +12,19 @@
         </reference>
         
         <reference name="product.info.addtocart">
-
             <action method="setTemplate" helper="recurse_pitchprint/template/isEnable">
                 <template>recurse/pitchprint/catalog/product/view/addtocart.phtml</template>
             </action>
-
-            <!-- <block type="recurse_pitchprint/customize" name="product.customize" as="product_customize" template="recurse/pitchprint/catalog/product/view/button_customize.phtml" /> -->
-
         </reference>
+        
+        <!--
+        <reference name="product.info.media">
+            <action method="setTemplate">
+                <template>recurse/pitchprint/catalog/product/view/media.phtml</template>
+            </action>
+        </reference>
+        -->
     
-    </catalog_product_view>]
+    </catalog_product_view>
 
 </layout>
